--- a/css/style.css
+++ b/css/style.css
@@ -13,28 +13,25 @@ body {
   min-width: 100%;
   min-height: 100%;
   font-family: Nexa;
-  padding-top: 4em;
-  padding-bottom: 1em;
   background-color: #2A262A;
   color: #FFF;
   background-image: url("../img/earth.png"), url("../img/stars.png");
-  background-repeat: no-repeat; }
+  background-position: center, center top;
+  background-repeat: no-repeat, repeat-y; }
 
-.black-icon {
-  color: black; }
+.white-icon {
+  color: white; }
 
-a.black-icon:hover {
-  color: black; }
+a.white-icon:hover {
+  color: white; }
 
-a.black-icon:visited {
-  color: black; }
+a.white-icon:visited {
+  color: white; }
 
 .logo {
   max-width: 25%;
   margin-left: auto;
-  margin-right: auto;
-  background-color: white;
-  border-radius: 10px; }
+  margin-right: auto; }
 
 .index-filter {
   background-color: rgba(0, 0, 0, 0.4);
